bokking service and auto ticket geneartion feature added